--- a/exercicios/para-casa/MVC/package.json
+++ b/exercicios/para-casa/MVC/package.json
@@ -4,6 +4,7 @@
   "description": "Refatoração do código da API de banco feito na semana passada, agora no padrão MVC ",
   "main": "index.js",
   "scripts": {
+    "start": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Mariana Cristina Dias dos Santos",
