--- a/exercicios/para-casa/MVC/package.json
+++ b/exercicios/para-casa/MVC/package.json
@@ -1,10 +1,10 @@
-{
+ {
   "name": "exercicio-para-casa",
   "version": "1.0.0",
   "description": "Refatoração do código da API de banco feito na semana passada, agora no padrão MVC ",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
-    "start": "nodemon index.js",
+    "start": "node server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Mariana Cristina Dias dos Santos",
