--- a/exercicios/para-casa/package.json
+++ b/exercicios/para-casa/package.json
@@ -1,15 +1,16 @@
 {
   "name": "api-padrao-mvc",
   "version": "1.0.0",
-  "description": "Refatoração do Projeto da Semana 8 usando padrão MVC",
-  "main": "index.js",
+  "description": "Refatoração do Projeto de API usando padrão MVC",
+  "main": "server.js",
   "scripts": {
-    "start": "nodemon index.js"
+    "start": "nodemon server.js"
   },
   "author": "Mellyssa Stephanny",
   "license": "MIT",
   "dependencies": {
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.20"
